# ream

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml
book/cli/ream/: account_manager.md
crates/account_manager/: Cargo.toml
crates/account_manager/src/: lib.rs
crates/common/account_manager/: Cargo.toml
crates/common/account_manager/src/: keystore.rs  lib.rs  message_types.rs  utils.rs
crates/common/chain/lean/: Cargo.toml
crates/common/consensus/lean/: Cargo.toml
crates/common/consensus/lean/src/: attestation.rs  block.rs  validator.rs  vote.rs
crates/crypto/pqc/: Cargo.toml
crates/crypto/pqc/src/: keystore.rs
crates/networking/discv5/src/: subnet.rs
crates/networking/p2p/src/network/: misc.rs
crates/rpc/lean/: Cargo.toml
testing/beacon-api/: Cargo.toml
