[package]
name = "ream-account-manager"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
hashsig.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
ream-pqc = { path = "../crypto/pqc" }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror = "2.0"
tracing.workspace = true
