[package]
name = "ream-account-manager"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bip39.workspace = true
chrono.workspace = true
hashsig.workspace = true
hex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
tracing.workspace = true
uuid.workspace = true

# ream dependencies
ream-post-quantum-crypto.workspace = true
