[package]
name = "ream-pqc"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hashsig.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
